--- a/index01.html
+++ b/index01.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h1>Olá Mundo</h1>
+        <h1 class="titulo">Olá Mundo</h1>
         <p>Primeira atividade, colocar "Olá mundo" na tela.</p>
     </div>
     <script src="app01.js"></script>
