--- a/index03.html
+++ b/index03.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h1>Média</h1>
+        <h1 class="titulo">Média</h1>
         <br>
         <p>Faça um programa que peça as 4 notas bimestrais e mostre a média.</p>
         <form>
