--- a/index04.html
+++ b/index04.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h1>Peso ideal</h1>
+        <h1 class="titulo">Peso ideal</h1>
         <br>
         <p>Tendo como dados de entrada a altura de uma pessoa, contrua um algoritmo que calcule seu peso ideal, usando a
             seguinte fómula:<br>
