--- a/index07.html
+++ b/index07.html
@@ -13,17 +13,17 @@
 
 <body>
     <div class="container">
-        <h1 class="titulo">Soma</h1>
-        <br>
-        <p>Faça um programa que peça dois números e imprima a soma.</p>
+        <h1 class="titulo">Dia da Semana</h1>
+        <p>Faça um programa que leia um npumero e exiba o dia correspondendo da semana.</p>
         <form>
-            Número 1: <input id="numero1" type="number"><br>
-            Número 2: <input id="numero2" type="number"><br>
-            <button type="button" onclick="Soma() ; ">Mostrar número</button>
+            Dia da semana: <input type="number" id="dia"><br>
+            <button type="button" onclick="VerificarDiaDaSemana();">Verificar Conceito</button>
+
             <div id="resposta"></div>
         </form>
+        
     </div>
-    <script src="app02.js"></script>
+    <script src="app07.js"></script>
 </body>
 
 </html>
