--- a/index06.html
+++ b/index06.html
@@ -14,8 +14,8 @@
 <body>
     <div class="container">
         <h1 class="titulo">Maior número</h1>
-        <p>Faça um programa que pergunte em que turno você estuda. Peça para digitar M-matutino ou V-vespertino ou
-            N-Noturno. Imprima a mensagem "Bom dia!", "Boa tarde!" ou "Boa noite!" ou "Valor inválido!", conforme o caso.
+        <p>Faça um programa que pergunte em que turno você estuda.<br> Peça para digitar M-matutino ou V-vespertino ou
+            N-Noturno. <br>Imprima a mensagem "Bom dia!", "Boa tarde!" ou "Boa noite!" ou "Valor inválido!", conforme o caso.
         </p>
         <form>
             <select id="periodo">
